model_patch_logs/django__django-10554_test_output.txt
>>>>> Start Test Output
+ export PYTHONPATH=/testbed:
+ PYTHONPATH=/testbed:
+ echo PYTHONPATH=/testbed:
PYTHONPATH=/testbed:
+ ./tests/runtests.py --verbosity 2 --settings=test_sqlite --parallel 1 queries.test_qs_combinators
Testing against Django installed in '/testbed/django'
Importing application queries
Skipping setup of unused database(s): other.
Creating test database for alias 'default' ('file:memorydb_default?mode=memory&cache=shared')...
Operations to perform:
  Synchronize unmigrated apps: auth, contenttypes, messages, queries, sessions, staticfiles
  Apply all migrations: admin, sites
Synchronizing apps without migrations:
  Creating tables...
    Creating table django_content_type
    Creating table auth_permission
    Creating table auth_group
    Creating table auth_user
    Creating table django_session
    Creating table queries_dumbcategory
    Creating table queries_namedcategory
    Creating table queries_tag
    Creating table queries_note
    Creating table queries_annotation
    Creating table queries_extrainfo
    Creating table queries_author
    Creating table queries_item
    Creating table queries_report
    Creating table queries_reportcomment
    Creating table queries_ranking
    Creating table queries_cover
    Creating table queries_number
    Creating table queries_valid
    Creating table queries_x
    Creating table queries_y
    Creating table queries_loopx
    Creating table queries_loopy
    Creating table queries_loopz
    Creating table queries_managedmodel
    Creating table queries_detail
    Creating table queries_member
    Creating table queries_child
    Creating table queries_custompk
    Creating table queries_related
    Creating table queries_custompktag
    Creating table queries_celebrity
    Creating table queries_tvchef
    Creating table queries_fan
    Creating table queries_leafa
    Creating table queries_leafb
    Creating table queries_join
    Creating table queries_reservedname
    Creating table queries_sharedconnection
    Creating table queries_pointera
    Creating table queries_pointerb
    Creating table queries_singleobject
    Creating table queries_relatedobject
    Creating table queries_plaything
    Creating table queries_article
    Creating table queries_food
    Creating table queries_eaten
    Creating table queries_node
    Creating table queries_objecta
    Creating table queries_childobjecta
    Creating table queries_objectb
    Creating table queries_objectc
    Creating table queries_simplecategory
    Creating table queries_specialcategory
    Creating table queries_categoryitem
    Creating table queries_mixedcasefieldcategoryitem
    Creating table queries_mixedcasedbcolumncategoryitem
    Creating table queries_onetoonecategory
    Creating table queries_categoryrelationship
    Creating table queries_commonmixedcaseforeignkeys
    Creating table queries_nullablename
    Creating table queries_modeld
    Creating table queries_modelc
    Creating table queries_modelb
    Creating table queries_modela
    Creating table queries_job
    Creating table queries_jobresponsibilities
    Creating table queries_responsibility
    Creating table queries_fk1
    Creating table queries_fk2
    Creating table queries_fk3
    Creating table queries_basea
    Creating table queries_identifier
    Creating table queries_program
    Creating table queries_channel
    Creating table queries_book
    Creating table queries_chapter
    Creating table queries_paragraph
    Creating table queries_page
    Creating table queries_myobject
    Creating table queries_order
    Creating table queries_orderitem
    Creating table queries_baseuser
    Creating table queries_task
    Creating table queries_staff
    Creating table queries_staffuser
    Creating table queries_ticket21203parent
    Creating table queries_ticket21203child
    Creating table queries_person
    Creating table queries_company
    Creating table queries_employment
    Creating table queries_school
    Creating table queries_student
    Creating table queries_classroom
    Creating table queries_teacher
    Creating table queries_ticket23605aparent
    Creating table queries_ticket23605a
    Creating table queries_ticket23605b
    Creating table queries_ticket23605c
    Creating table Individual
    Creating table RelatedIndividual
    Creating table queries_customdbcolumn
    Running deferred SQL...
Running migrations:
  Applying admin.0001_initial...Traceback (most recent call last):
  File "/testbed/django/db/migrations/executor.py", line 246, in apply_migration
    self.record_migration(migration)
  File "/testbed/django/db/migrations/executor.py", line 261, in record_migration
    self.recorder.record_applied(migration.app_label, migration.name)
  File "/testbed/django/db/migrations/recorder.py", line 86, in record_applied
    self.migration_qs.create(app=app, name=name)
  File "/testbed/django/db/models/query.py", line 430, in create
    obj.save(force_insert=True, using=self.db)
  File "/testbed/django/db/models/base.py", line 747, in save
    force_update=force_update, update_fields=update_fields)
  File "/testbed/django/db/models/base.py", line 785, in save_base
    force_update, using, update_fields,
  File "/testbed/django/db/models/base.py", line 876, in _save_table
    result = self._do_insert(cls._base_manager, using, fields, update_pk, raw)
  File "/testbed/django/db/models/base.py", line 914, in _do_insert
    using=using, raw=raw)
  File "/testbed/django/db/models/manager.py", line 82, in manager_method
    return getattr(self.get_queryset(), name)(*args, **kwargs)
  File "/testbed/django/db/models/query.py", line 1184, in _insert
    return query.get_compiler(using=using).execute_sql(return_id)
  File "/testbed/django/db/models/sql/query.py", line 282, in get_compiler
    return connection.ops.compiler(self.compiler)(self, connection, using)
  File "/testbed/django/db/backends/base/operations.py", line 330, in compiler
    self._cache = import_module(self.compiler_module)
  File "/opt/miniconda3/envs/testbed/lib/python3.6/importlib/__init__.py", line 126, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
  File "<frozen importlib._bootstrap>", line 994, in _gcd_import
  File "<frozen importlib._bootstrap>", line 971, in _find_and_load
  File "<frozen importlib._bootstrap>", line 955, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 665, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 674, in exec_module
  File "<frozen importlib._bootstrap_external>", line 781, in get_code
  File "<frozen importlib._bootstrap_external>", line 741, in source_to_code
  File "<frozen importlib._bootstrap>", line 219, in _call_with_frames_removed
  File "/testbed/django/db/models/sql/compiler.py", line 371
    continue
    ^
IndentationError: unexpected indent

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "./tests/runtests.py", line 564, in <module>
    options.start_at, options.start_after,
  File "./tests/runtests.py", line 310, in django_tests
    extra_tests=extra_tests,
  File "/testbed/django/test/runner.py", line 648, in run_tests
    old_config = self.setup_databases(aliases=databases)
  File "/testbed/django/test/runner.py", line 573, in setup_databases
    self.parallel, **kwargs
  File "/testbed/django/test/utils.py", line 173, in setup_databases
    serialize=connection.settings_dict.get('TEST', {}).get('SERIALIZE', True),
  File "/testbed/django/db/backends/base/creation.py", line 72, in create_test_db
    run_syncdb=True,
  File "/testbed/django/core/management/__init__.py", line 148, in call_command
    return command.execute(*args, **defaults)
  File "/testbed/django/core/management/base.py", line 369, in execute
    output = self.handle(*args, **options)
  File "/testbed/django/core/management/base.py", line 83, in wrapped
    res = handle_func(*args, **kwargs)
  File "/testbed/django/core/management/commands/migrate.py", line 233, in handle
    fake_initial=fake_initial,
  File "/testbed/django/db/migrations/executor.py", line 117, in migrate
    state = self._migrate_all_forwards(state, plan, full_plan, fake=fake, fake_initial=fake_initial)
  File "/testbed/django/db/migrations/executor.py", line 147, in _migrate_all_forwards
    state = self.apply_migration(state, migration, fake=fake, fake_initial=fake_initial)
  File "/testbed/django/db/migrations/executor.py", line 247, in apply_migration
    migration_recorded = True
  File "/testbed/django/db/backends/sqlite3/schema.py", line 34, in __exit__
    self.connection.check_constraints()
  File "/testbed/django/db/backends/sqlite3/base.py", line 302, in check_constraints
    violations = self.cursor().execute('PRAGMA foreign_key_check').fetchall()
  File "/testbed/django/db/backends/utils.py", line 68, in execute
    return self._execute_with_wrappers(sql, params, many=False, executor=self._execute)
  File "/testbed/django/db/backends/utils.py", line 77, in _execute_with_wrappers
    return executor(sql, params, many, context)
  File "/testbed/django/db/backends/utils.py", line 80, in _execute
    self.db.validate_no_broken_transaction()
  File "/testbed/django/db/backends/base/base.py", line 438, in validate_no_broken_transaction
    "An error occurred in the current transaction. You can't "
django.db.transaction.TransactionManagementError: An error occurred in the current transaction. You can't execute queries until the end of the 'atomic' block.
>>>>> End Test Output
SWEBENCH_TEST_EXIT_CODE=1
